--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 0  # Change if you need git info
       - uses: DeterminateSystems/nix-installer-action@main
-         
+      - uses: DeterminateSystems/magic-nix-cache-action@main
       - name: Restore cache
         uses: actions/cache/restore@v3
         with:
@@ -22,17 +22,14 @@ jobs:
             ~/.cache/zig
             zig-cache
           key: blog-${{hashFiles('build.zig.zon')}}          
-
       - name: Build
         run: nix develop .# --command zig build --summary all
-          
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./zig-out
-          
       - name: Save Cache
         uses: actions/cache/save@v3
         with:
