switch to mlugg/setup-zig@v1

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ name: github pages
 on:
   push:
     branches:
-      - main  # Set a branch to deploy
+      - main # Set a branch to deploy
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -12,28 +12,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Change if you need git info
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      - name: Restore cache
-        uses: actions/cache/restore@v3
-        with:
-          path: |
-            ~/.cache/zig
-            zig-cache
-          key: blog-${{hashFiles('build.zig.zon')}}          
+          fetch-depth: 0
+      - name: Setup Zig
+        uses: mlugg/setup-zig@v1
       - name: Build
-        run: nix develop .# --command zig build --summary all
+        run: zig build --summary all
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./zig-out
-      - name: Save Cache
-        uses: actions/cache/save@v3
-        with:
-          path: |
-            ~/.cache/zig
-            zig-cache
-          key: blog-${{hashFiles('build.zig.zon')}}
